--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "homepage":"https://anthony-ditroit.github.io/Zoom_clone/",
   "scripts": {
+    "predeploy": "npm run build",
+    "desplegar": "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
